[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-circuit-breaker"
version = "0.1.0"
description = "A tiny, readable circuit breaker for LLM calls: hard budget caps that fail over to a free local model instead of raising or overspending."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["llm_circuit_breaker*"]
