[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-circuit-breaker"
version = "0.2.0"
description = "A tiny, readable circuit breaker for LLM calls: hard budget caps that fail over to a free local model instead of raising or overspending."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "DDHH" }]
keywords = [
    "llm", "ollama", "local-llm", "budget", "cost-control",
    "fallback", "circuit-breaker", "openai", "anthropic", "agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/qkrehgk1-wq/llm-circuit-breaker"
Repository = "https://github.com/qkrehgk1-wq/llm-circuit-breaker"
Issues = "https://github.com/qkrehgk1-wq/llm-circuit-breaker/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
dev = ["pytest>=7.0"]

[project.scripts]
llm-cb = "llm_circuit_breaker.cli:main"

[tool.setuptools.packages.find]
include = ["llm_circuit_breaker*"]
